Preventing overflow from ballots

--- a/styles/ballots.css
+++ b/styles/ballots.css
@@ -40,6 +40,7 @@
     color: #333;
     background-size: cover;
     background-position: center;
+    overflow: clip;
 }
 .ballot img {
     padding-top: 0.5rem;
